owncloud-news (1.808)
* Also focus article area when clicking on all unread link
* Autofocus article area by default on load
* Instantiate only one itemcontroller, prevents tons of requests when autopaging
* Fix bug that would disable keyboard shortcuts after the star icon has been clicked

owncloud-news (1.807)
* Don't crash if an HttpException occurs in the python updater
* Add API call to rename a feed
* Don't collapse articles in compact mode if you select a new article to prevent the scroll position from changing

owncloud-news (1.806)
* Disable simple pie sanitation (we use HtmlPurifier) to speed up update
* Only purify articles if they will be added to the database
* Fix XSS vulnerability that was caused by not purifing the body of imported articles
* Also float the first picture in the first div left (fixes ugly images for golem.de feed)

owncloud-news (1.805)
* Hide editing tools in invalid feed dialog
* Use local copies of icons to reflect changes in oc 7

owncloud-news (1.804)
* Make it possible to rename folders
* Do not show rename action for feeds that could not be added
* Trim URL in invalid feed modal
* Article enhancer for
  - niebezpiecznik.pl

owncloud-news (1.803)
* Use the feed link if an item doesn't specificy a link
* Don't fail if article url does not exist but fall back to feed url
* Article enhancers for
  - nerfnow.com
  - sandraandwo.com
  - geek-and-poke.com
  - nichtlustig.de
  - thegamercat.com
  - twokinds.keenspot.com

owncloud-news (1.802)
* Increase performance by not making auto page requests anymore if the last result didn't contain any articles

owncloud-news (1.801)
* Add ability to rename feeds
* Compact view
* Add shortcut to expand items in compact view

owncloud-news (1.605)
* Adding feeds does not block the input box any more
* Always display empty folders
* Better description for hiding/showing read articles
* Make it easier to add simple article enhancers by moving the data into a JSON configuration file